@@ -7,6 +7,7 @@ qtile 0.x.x, released xxxx-xx-xx:
         - various Systray fixes, including implementing XEMBED protocol
         - print exception to log during loading config
         - fixed xmonad layout margins
+        - clear last window name from group widgets when closed
     * config breakage
         - layouts.VerticalTile `windows` is now `clients`
         - layouts.VerticalTile focus_next/focus_previous now take a single
